# Agentic-RAG-MCP

./: .env.example  .gitignore  Dockerfile  Makefile  PUSH_INSTRUCTIONS.md  README.md  docker-compose.yml  pyproject.toml  setup_missing.py
.github/workflows/: ci.yml
deploy/prometheus/: prometheus.yml
docs/: demo_output.txt
eval/: golden_set.jsonl  run.py
examples/: claude_desktop_config.json  ingest_docs.py  run_demo.py
migrations/: 001_init.sql
seed/sample_docs/: 01_distributed_systems.md  02_model_context_protocol.md  03_retrieval_augmented_generation.md  04_agentic_patterns.md
src/agentic_rag_mcp/: __init__.py  __main__.py  agentic.py  auth.py  config.py  embeddings.py  ingestion.py  llm.py  observability.py  reranker.py  retrieval.py  server.py  storage.py  tools.py
src/agentic_rag_mcp/eval/: __init__.py  metrics.py
tests/: test_chunking.py
