[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-mcp"
version = "0.1.0"
description = "Agentic RAG over pgvector, exposed as a Model Context Protocol server."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jayadeep Gopinath" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "asyncpg>=0.29",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "openai>=1.40",
    "anthropic>=0.34",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7",
    "pypdf>=4.0",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "prometheus-client>=0.20",
    "structlog>=24.0",
    "tenacity>=8.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
agentic-rag-mcp = "agentic_rag_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
